Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- #333: folder_localrole_form is accessible without authentication. "Change
  permissions" permission is now required, as for the action.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-