@@ -8,6 +8,7 @@ Bug fixes:
 ~~~~~~~~~~
 - #333: folder_localrole_form is accessible without authentication. "Change
   permissions" permission is now required, as for the action.
+- Protect the underneath search script the same way.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 -
